--- a/blog_spider/scrapy.cfg
+++ b/blog_spider/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = qiushi.settings
+default = blog_spider.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = qiushi
+project = blog_spider
