--- a/blog/scrapy.cfg
+++ b/blog/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = blog_spider.settings
+default = blog.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = blog_spider
+project = blog
