--- a/weibo_spider/scrapy.cfg
+++ b/weibo_spider/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = jianshu_spider.settings
+default = weibo_spider.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = jianshu_spider
+project = weibo_spider
